modified background, styles and added giftTable

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   font-family: "Imperial Script", cursive;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
 }
 
 .tangerine-regular {
